# telemetry-dashboard

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sample/: events.csv
scripts/: add_latency.py
tests/: test_cli.py  test_edge_cases.py  test_flow.py  test_size.py
tlt/: cli.py  ingest.py  report.py  size.py  transform.py
